package vues;

import donnees.Colonne;

import java.util.List;

public interface StrategieModeAffichage {
    void genererAffichage(List<Colonne> colonnes);
}
