@startuml

package vues{
    interface StrategieModeAffichage{
        genererAffichage(Modele):void
    }

    interface Observateur{
        actualiser():void
    }

    class VueListes{
        - addTache:Button
        - colonnes:Map<TacheComposite, String>
        - table:TableView<TacheComposite>
        - nomColonnes:ObservableList<String>


        + VueListes()
        + genererAffichage(Modele):void
        - creeTable():void
        - deplacerTache(TacheComposite, String, String):void
        - gestionAjout(): void
    }

    class VueTaches{
        + VueTaches(Modele)
        + actualiser():void
        + setModeAffichage(StrategieModeAffichage):void
    }

    class PopupAddTache{
        +display(Modele, Colonne): void
    }
}

class Colonne{}

class Modele{}

class VBox{}

class ControleurAjouterTache{}

VueListes ..|> StrategieModeAffichage
VueListes --> "1" Modele:model
VueListes --|> VBox
VueListes ...> "<<use>>" PopupAddTache


VueTaches ..|> Observateur
VueTaches --> "1" StrategieModeAffichage:modeAffichage
VueTaches --> "*" Colonne
VueTaches --> "1" Modele:model

PopupAddTache ...> "<<use>>" ControleurAjouterTache

@enduml